fix: correct align p content for nav section at lg screens

--- a/css/output.css
+++ b/css/output.css
@@ -566,6 +566,11 @@ video {
   margin-bottom: 1rem;
 }
 
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -612,6 +617,10 @@ video {
 
 .h-c90 {
   height: 90%;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .w-1\/4 {
@@ -753,6 +762,11 @@ video {
   padding-bottom: 2rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .pt-4 {
   padding-top: 1rem;
 }
@@ -800,10 +814,6 @@ video {
 
 .duration-300 {
   transition-duration: 300ms;
-}
-
-.duration-200 {
-  transition-duration: 200ms;
 }
 
 @media (min-width: 640px) {
@@ -951,16 +961,6 @@ video {
     --tw-scale-x: 1.1;
     --tw-scale-y: 1.1;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .lg\:hover\:text-blue-950:hover {
-    --tw-text-opacity: 1;
-    color: rgb(23 37 84 / var(--tw-text-opacity));
-  }
-
-  .lg\:hover\:text-red-600:hover {
-    --tw-text-opacity: 1;
-    color: rgb(220 38 38 / var(--tw-text-opacity));
   }
 
   .lg\:hover\:text-yellow-900:hover {
